--- a/Front-portfolio/package.json
+++ b/Front-portfolio/package.json
@@ -13,6 +13,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
+    "react-spring": "^9.7.3",
+    "react-spring-3d-carousel": "^1.3.4",
     "styled-components": "^6.1.1",
     "web-vitals": "^2.1.4"
   },
